bin/tests/snapshots/shellcheck__9f1c27022e2320d6665a24d68fd9e983_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
stdenv.mkDerivation { installPhase = ''
  mkdir -p $out/bin
  cp $src/tool $out/bin/
''; }
---
<temp_file_path>>2:12:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
<temp_file_path>>3:6:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
<temp_file_path>>3:16:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
<temp_file_path>>2:3:W:33:[shell_idiom] `mkdir -p` + `cp` can be one `install`
<temp_file_path>>2:3:W:33:[shell_idiom] The phase doesn't run `runHook preInstall`
<temp_file_path>>3:25:W:33:[shell_idiom] The phase doesn't run `runHook postInstall`
