bin/tests/snapshots/shellcheck__9f1c27022e2320d6665a24d68fd9e983_lint_json.snap
---
source: bin/tests/shellcheck.rs
---
stdenv.mkDerivation { installPhase = ''
  mkdir -p $out/bin
  cp $src/tool $out/bin/
''; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "shellcheck",
      "note": "ShellCheck found issues in an inline shell script",
      "code": 28,
      "severity": "Hint",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 12
            },
            "to": {
              "line": 2,
              "column": 16
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 38
              },
              "to": {
                "line": 4,
                "column": 3
              }
            },
            "fix": "''\n  mkdir -p \"$out\"/bin\n  cp \"$src\"/tool \"$out\"/bin/\n''"
          },
          "fixable": true
        },
        {
          "at": {
            "from": {
              "line": 3,
              "column": 6
            },
            "to": {
              "line": 3,
              "column": 10
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": null,
          "fixable": true
        },
        {
          "at": {
            "from": {
              "line": 3,
              "column": 16
            },
            "to": {
              "line": 3,
              "column": 20
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": null,
          "fixable": true
        }
      ]
    },
    {
      "name": "shell_idiom",
      "note": "Shell commands with a shorter idiom",
      "code": 33,
      "severity": "Hint",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 25
            }
          },
          "message": "`mkdir -p` + `cp` can be one `install`",
          "suggestion": null,
          "fixable": false,
          "help": "Use `install -D $src/tool $out/bin/tool`. `install` sets mode 755 unless given `-m`, where `cp` keeps the source's mode: add `-m 644` for data files."
        },
        {
          "at": {
            "from": {
              "line": 2,
              "column": 3
            },
            "to": {
              "line": 2,
              "column": 3
            }
          },
          "message": "The phase doesn't run `runHook preInstall`",
          "suggestion": null,
          "fixable": false,
          "help": "Use `runHook preInstall`. Overriding a phase skips its hooks unless it runs them: `preInstall`/`postInstall` from the derivation and from setup hooks. Leave them out only on purpose."
        },
        {
          "at": {
            "from": {
              "line": 3,
              "column": 25
            },
            "to": {
              "line": 3,
              "column": 25
            }
          },
          "message": "The phase doesn't run `runHook postInstall`",
          "suggestion": null,
          "fixable": false,
          "help": "Use `runHook postInstall`. Overriding a phase skips its hooks unless it runs them: `preInstall`/`postInstall` from the derivation and from setup hooks. Leave them out only on purpose."
        }
      ]
    }
  ]
}
